[package]
name = "axum-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
tower = "0.5.2"
tokio = "1.48.0"
log = "0.4.28"
http-body = "1.0.1"
time = "0.3.44"
async-trait = "0.1.89"

[dev-dependencies]
axum-test = "18.3.0"
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.18.1", features = ["v4"] }
fn-decorator = "1.3.2"
parking_lot = "0.12.5"
